fix controllers